Fix profile panel not being able to be closed due to hidden sidebar (#1220)

--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -389,7 +389,8 @@ a {
 }
 .content-sidebar[hidden][data-has-navigation-previous=true],
 .content-sidebar[hidden][data-has-navigation-next=true],
-:root[data-popup-action-bar-visibility=always] .content-sidebar {
+:root[data-popup-action-bar-visibility=always] .content-sidebar,
+:root[data-profile-panel-visible=true] .content-sidebar {
     display: block;
 }
 .content-sidebar-inner {
