Popup window options (#1245)
* Add popupWindow options

* Add toBoolean converter

* Add settings

* Use new options

* Add test link

* Fix window state not working

* Make the window section advanced only

--- a/ext/bg/css/settings2.css
+++ b/ext/bg/css/settings2.css
@@ -230,7 +230,7 @@ h3 {
     font-size: calc(1em / 1.125);
     color: var(--text-color-light);
 }
-.heading-link-light {
+a.heading-link-light {
     color: var(--text-color-light);
 }
 .heading-description,
