Fix menu items not being hidden properly (#1297)

--- a/ext/mixed/css/material.css
+++ b/ext/mixed/css/material.css
@@ -935,8 +935,10 @@ button.popup-menu-item {
     font-size: 1em;
     font-weight: normal;
     font-family: inherit;
-    display: flex;
     align-items: center;
+}
+button.popup-menu-item:not([hidden]) {
+    display: flex;
 }
 button.popup-menu-item:hover:not(:disabled),
 button.popup-menu-item:focus:not(:disabled) {
