Update popup menu structure (#1301)
* Wrap menu items in popup-menu-body

* Use bodyNode instead of node

* Update selector

* Update _setPosition to not use items

--- a/ext/mixed/css/material.css
+++ b/ext/mixed/css/material.css
@@ -928,11 +928,13 @@ button.icon-button:active {
     border-radius: var(--menu-border-radius);
     background-color: var(--background-color-light);
     padding: 0.5em 0;
+    min-width: 8em;
+    overflow: auto;
+}
+.popup-menu-body {
     display: flex;
     flex-flow: column nowrap;
     align-items: stretch;
-    min-width: 8em;
-    overflow: auto;
     white-space: nowrap;
 }
 button.popup-menu-item {
