Multiple custom audio sources (#1303)
* Fix label

* Fix icon size being flexible

* Add schema

* Add customSourceType option

* Update settings

* Pass customSourceType to the audio downloader

* Implement custom audio JSON mode

--- a/ext/mixed/css/material.css
+++ b/ext/mixed/css/material.css
@@ -970,6 +970,7 @@ button.popup-menu-item:disabled {
     height: calc(16em / 14);
     background-color: var(--text-color);
     margin-right: 0.5em;
+    flex: 0 0 auto;
 }
 .popup-menu-item-icon:not([hidden]) {
     display: block;
