Native keyboard shortcuts settings (#1322)
* Fix style issue

* Add ExtensionKeyboardShortcutController

* Move descriptions

* Add separator line

--- a/ext/bg/css/settings2.css
+++ b/ext/bg/css/settings2.css
@@ -791,7 +791,8 @@ select.short-height {
     flex: 0 0 auto;
     padding: var(--modal-padding-vertical-half) var(--modal-padding-horizontal);
 }
-.modal-body>.settings-item {
+.modal-body>.settings-item,
+.modal-settings-group>.settings-item {
     margin-left: calc(var(--modal-padding-horizontal) * -1);
 }
 .modal-body .settings-item {
@@ -910,6 +911,15 @@ button.icon-button.modal-header-button:active>.icon-button-inner>.icon {
     transition:
         opacity var(--animation-duration2) ease-in-out 0s,
         visibility 0s ease-in-out var(--animation-duration2);
+}
+
+.modal-separator-line {
+    border-bottom: var(--thin-border-size) solid var(--separator-color1);
+    margin: 0 calc(var(--modal-padding-horizontal) * -1);
+}
+.modal-separator-line-light {
+    border-bottom: var(--thin-border-size) solid var(--separator-color2);
+    margin: 0 calc(var(--modal-padding-horizontal) * -1);
 }
 
 
@@ -1942,11 +1952,6 @@ input.sentence-termination-character-input2 {
 }
 .hotkey-scope-checkbox-container>span {
     padding-left: 0.375em;
-}
-
-.anki-card-primary-separator {
-    border-bottom: var(--thin-border-size) solid var(--separator-color1);
-    margin: 0 calc(var(--modal-padding-horizontal) * -1);
 }
 
 
