Fix incorrect function (#1325)

--- a/ext/bg/data/default-anki-field-templates.handlebars
+++ b/ext/bg/data/default-anki-field-templates.handlebars
@@ -120,7 +120,7 @@
 {{~/inline~}}
 
 {{#*inline "glossary-no-dictionary"}}
-    {{~> glossary2 noDictionaryTag=true ~}}
+    {{~> glossary noDictionaryTag=true ~}}
 {{/inline}}
 
 {{#*inline "glossary-brief"}}
