Add note errors (#1329)
* Update _addAnkiNote to track errors

* Change comparison

* Update anki note adding to show errors

* Fix template

* Show errors when Anki card creation behaves unexpectedly

* Update some errors related to anki media injection

* Update addAnkiNote error handling

* Improve Anki errors

* Simplify error messages related to template rendering

--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -1675,6 +1675,14 @@ button.footer-notification-close-button:active {
 }
 
 
+/* Anki errors */
+.anki-note-error-list {
+    margin: 0;
+    padding-left: 1.5em;
+    list-style: disc;
+}
+
+
 /* Conditional styles */
 :root:not([data-enable-search-tags=true]) .tag[data-category=search] {
     display: none;
